2011-04-04 Sasa Bojanic <sasaboy@together.at>
   # Project restructured, build scripts changed (nsis moved to tools folder, docbook files moved to tools\docbook folder)

2011-04-02 Sasa Bojanic <sasaboy@together.at>
   # Project restructured, build scripts changed (all libraries now in tools sub-folders)

2011-04-01 Sasa Bojanic <sasaboy@together.at>
   # Some classes changed name (*GraphParticipant* to *GraphSwimlane*).
   # API docu improved
   
2011-03-28 Sasa Bojanic <sasaboy@together.at>
   # jxpdl.jar updated to SVN Revision 54
   # Added support for "Script" Activity type (TaskScript from XPDL).
   # Improved property panels for DataField and FormalParameter elements
   # Changed property panels for ActualParameter/InitialValue/DeadlineDuration/Condition elements
   # Various improvements
   
2011-03-23 Sasa Bojanic <sasaboy@together.at>
   # Removed dependency to TAS
   
2011-03-22 Sasa Bojanic <sasaboy@together.at>
   # readregistry.exe replaced with the newer version now comming from its own project TRR (Together Read Registry), version 1.0-1
 
2011-03-16 Sasa Bojanic <sasaboy@together.at>
   # Updated JAR's MANIFEST information

2011-03-07 Sasa Bojanic <sasaboy@together.at>
   # Not packaging Java API documentation into distribution zip/tar.gz/exe/rpm files

2011-03-04 Sasa Bojanic <sasaboy@together.at>
   # Docbook upgraded to version 1.76.1

2011-03-03 Sasa Bojanic <sasaboy@together.at>
   # Occurrence of twe@together.at in various source files changed to twe@togetherteam.co.th

2011-02-24 Sasa Bojanic <sasaboy@together.at>
   # Fixed bug with copying processes/activity sets from "transient" packages
   # Fixed: not creating unnecessary NodeGraphicsInfo element for Pools when process/activity set gets copied
   
2011-02-23 Sasa Bojanic <sasaboy@together.at>
   # The build.debug property removed from build.properties file, new build target "debug" introduced 
     to build TWE JAR files with DEBUG information in the classes