@@ -366,8 +366,12 @@
    <!-- ==================================================================== -->
    <!-- Cleans everything                                                    -->
    <!-- ==================================================================== -->
-   <target name="clean">
+   <target name="clean" depends="init">
       <delete dir="${output.doc.dir}" />
+      <delete>
+         <fileset dir="${basedir}" includes="log.txt,${docbook.name}.xml~" defaultexcludes="false"/>
+      </delete>
+      <delete dir="${basedir}/tmp" />      
    </target>
 
 </project>
